--- a/src/ModInstaller.Native/ModInstaller.Native.csproj
+++ b/src/ModInstaller.Native/ModInstaller.Native.csproj
@@ -16,6 +16,8 @@
     <TrimMode>full</TrimMode>
     <DebugType>none</DebugType>
     <NativeLib>Shared</NativeLib>
+    <!-- Temporary force TRACK_ALLOCATIONS  -->
+    <DefineConstants>$(DefineConstants);TRACK_ALLOCATIONS;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="$(Configuration) == 'Debug'">
     <!--
