--- a/test/TestData/TestData.csproj
+++ b/test/TestData/TestData.csproj
@@ -10,13 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Data\Fallout4\Improved Map with Visible Roads 2.0-1215-2-0.zip" />
     <EmbeddedResource Include="Data\Fallout4\Improved Map with Visible Roads 2.0-1215-2-0.zip" />
-    <None Remove="Data\Skyrim\Spell Perk Item Distributor-36869-7-1-3-1713397024.7z" />
     <EmbeddedResource Include="Data\Skyrim\Spell Perk Item Distributor-36869-7-1-3-1713397024.7z" />
-    <None Remove="Data\FomodComplianceTests.zip" />
+    <EmbeddedResource Include="Data\Skyrim\Better MessageBox Controls v1_2-1428-1-2.zip" />
+    <EmbeddedResource Include="Data\Skyrim\XP32 Maximum Skeleton Special Extended-1988-5-06-1707663131.7z" />
     <EmbeddedResource Include="Data\FomodComplianceTests.zip" />
-    <None Remove="Data\CSharpTestCase.zip" />
     <EmbeddedResource Include="Data\CSharpTestCase.zip" />
   </ItemGroup>
 
