--- a/src/ModInstaller.IPC.TypeScript/tsconfig.json
+++ b/src/ModInstaller.IPC.TypeScript/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "allowJs": true,
     "checkJs": false,
-    "incremental": true,
+    "incremental": false,
     "target": "ES2019",
     "outDir": "dist",
     "rootDir": "src",
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
+    "emitDeclarationOnly": true,
     "sourceMap": true,
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "resolveJsonModule": false /* Include modules imported with .json extension. */,
