--- a/src/ModInstaller.Native/ModInstaller.Native.csproj
+++ b/src/ModInstaller.Native/ModInstaller.Native.csproj
@@ -17,11 +17,8 @@
     <DebugType>none</DebugType>
     <NativeLib>Shared</NativeLib>
     <!-- Temporary force TRACK_ALLOCATIONS  -->
-    <DefineConstants>$(DefineConstants);TRACK_ALLOCATIONS;</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="$(Configuration) == 'Debug'">
     <DefineConstants>$(DefineConstants);TRACK_ALLOCATIONS;LOGGING;</DefineConstants>
-  </PropertyGroup>  
+  </PropertyGroup>
   
   <PropertyGroup Condition="$(Configuration) == 'Release'">
     <!--
@@ -58,6 +55,7 @@
     <PackageReference Include="BUTR.NativeAOT.Generator" Version="1.0.98" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="BUTR.NativeAOT.Shared.Source" Version="1.0.98" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
+    <PackageReference Include="ZLogger" Version="2.5.10" />
   </ItemGroup>
 
 </Project>
