--- a/src/ModInstaller.IPC/ModInstaller.IPC.csproj
+++ b/src/ModInstaller.IPC/ModInstaller.IPC.csproj
@@ -1,18 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   
   <PropertyGroup>
-    <TargetFrameworks>net9.0-windows;net48</TargetFrameworks>
     <LangVersion>preview</LangVersion>
     <OutputType>Exe</OutputType>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    
     <UseWindowsForms>true</UseWindowsForms>
 
     <RootNamespace>ModInstallerIPC</RootNamespace>
     <AssemblyName>ModInstallerIPC</AssemblyName>
   </PropertyGroup>
 
-  <PropertyGroup Condition="$(TargetFramework) == 'net9.0-windows'">
+  <PropertyGroup Condition="$(OS) == 'Windows_NT'">
+    <TargetFramework>net9.0-windows</TargetFramework>
+
     <SelfContained>true</SelfContained>
     <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
     <PublishSingleFile>true</PublishSingleFile>
@@ -25,6 +27,9 @@
     <PublishTrimmed>true</PublishTrimmed>
     <InvariantGlobalization>true</InvariantGlobalization>
     -->
+  </PropertyGroup>
+  <PropertyGroup Condition="$(OS) != 'Windows_NT'">
+    <TargetFramework>net48</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration) == 'Release'">
