--- a/src/ModInstaller.Native/ModInstaller.Native.csproj
+++ b/src/ModInstaller.Native/ModInstaller.Native.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>12</LangVersion>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IsPackable>false</IsPackable>
@@ -17,6 +17,13 @@
     <DebugType>none</DebugType>
     <NativeLib>Shared</NativeLib>
     <DefineConstants>$(DefineConstants);LOGGING;</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="$(OS) == 'Windows_NT'">
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+  </PropertyGroup>
+  <PropertyGroup Condition="$(OS) != 'Windows_NT'">
+    <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
   </PropertyGroup>
   
   <PropertyGroup Condition="$(Configuration) == 'Release'">
@@ -55,10 +62,17 @@
     <!--
     <PackageReference Include="BUTR.NativeAOT.Analyzer" Version="1.0.78" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     -->
-    <PackageReference Include="BUTR.NativeAOT.Generator" Version="1.0.98" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
-    <PackageReference Include="BUTR.NativeAOT.Shared.Source" Version="1.0.98" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="BUTR.NativeAOT.Generator" Version="1.0.99" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
+    <PackageReference Include="BUTR.NativeAOT.Shared.Source" Version="1.0.99" PrivateAssets="all" IncludeAssets="runtime; build; native; contentfiles; analyzers; buildtransitive" />
     <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
     <PackageReference Include="ZLogger" Version="2.5.10" />
   </ItemGroup>
+  
+  <Target Name="CopyNativeContent" AfterTargets="Publish">
+    <ItemGroup>
+      <NativeOutputFiles Include="bin\$(Configuration)\$(TargetFramework)\$(RuntimeIdentifier)\native\**\*.*" />
+    </ItemGroup>
+    <Copy SourceFiles="@(NativeOutputFiles)" DestinationFolder="$(PublishDir)" SkipUnchangedFiles="true" />
+  </Target>
 
 </Project>
